--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    <link rel="stylesheet" href="layout.css">
+    <style>
+      p {
+        font-size: 24px;
+        background-color: green;
+        color:white;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color: goldenrod; font-size: 24px; border-top-color: gray; border-left-color: grey; border-right-color: rgba(148, 148, 148, 0.397); border-bottom-color: rgba(148, 148, 148, 0.397); font-weight: 500;">Inline Method</button>
   </body>
 </html>
